bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/unsupported_pezpallet_attr.stderr
error: Unsupported attribute, only #[cfg] is supported on pezpallet declarations in `construct_runtime`
  --> tests/construct_runtime_ui/unsupported_pezpallet_attr.rs:24:3
   |
24 |         #[attr]
   |         ^
